--- a/continents.html
+++ b/continents.html
@@ -24,7 +24,7 @@ and to the east of the Turkish Straits, the Ural Mountains and Ural River, and t
 <hr><hr>
 
 <h1>Arctic<a name='c2'></a></h1>
-<img src='Arctic.png' width='800' height='600'>
+<img src='arctic.png' width='800' height='600'>
 <br><br><br>
 <p>or to the constellation Ursa Minor, the "Little Bear", which contains the celestial north pole (currently The Arctic region is a unique area among Earth's ecosystems.
 The cultures in the region and the Arctic indigenous peoples have adapted to its cold and extreme conditions.
@@ -48,7 +48,7 @@ when the worldwide median age was 30.4. Despite a wide range of natural resource
 </p>
 <hr><hr>
 <h1>AMERICAS<a name='c4'></a></h1>
-<img src='america.png' width='800' height='600'>
+<img src='America.png' width='800' height='600'>
 <br><br><br>
 <p>The Americas, which are sometimes collectively called America, are a landmass comprising the totality of North and South America.
 The Americas make up most of the land in Earth's Western Hemisphere and comprise the New World.
@@ -61,7 +61,7 @@ Greenland, and Alaska, to the tropical rain forests in Central America and South
 </p>
 <hr><hr>
 <h1>AUSTRALIA<a name='c5'></a></h1>
-<img src='AUSTRALIA.png' width='800' height='600'>
+<img src='australia.png' width='800' height='600'>
 <br><br><br>
 <p>Australia, officially the Commonwealth of Australia, is a sovereign country comprising the mainland of the Australian continent,
 the island of Tasmania, and numerous smaller islands. With an area of 7,617,930 square kilometres.
@@ -71,7 +71,7 @@ with deserts in the centre, tropical rainforests in the north-east, and mountain
 </p>
 <hr><hr>
 <h1>ANTARCTICA<a name='c6'></a></h1>
-<img src='ANTARCTICA.png' width='800' height='600'>
+<img src='antarctica.png' width='800' height='600'>
 <br><br><br>
 <p>Antarctica, the southernmost continent and site of the South Pole, is a virtually uninhabited, ice-covered landmass.
 Most cruises to the continent visit the Antarctic Peninsula, which stretches toward South America.
@@ -80,7 +80,7 @@ The peninsula’s isolated terrain also shelters rich wildlife, including many p
 </p>
 <hr><hr>
 <h1>EUROPE<a name='c7'></a></h1>
-<img src='EUROPE.png' width='800' height='600'>
+<img src='europe.png' width='800' height='600'>
 <br><br><br>
 <p>Europe is a landmass, which is either considered a continent in its own right or a subcontinent of Eurasia,
 located entirely in the Northern Hemisphere and mostly in the Eastern Hemisphere.
