--- a/oceans.html
+++ b/oceans.html
@@ -18,7 +18,7 @@ and is bounded by the continents of Asia and Australia in the west and the Ameri
 </p>
 <hr><hr>
 <h1>Atlantic Ocean<a name='T2'></a></h1>
-<img src='Atlantic.png' width='600px' height='500px'>
+<img src='atlantic.png' width='600px' height='500px'>
 <br><br>
 <p>The Atlantic Ocean is the second-largest of the world's five oceans,
 with an area of about 106,460,000 km². It covers approximately 20% of Earth's surface
@@ -33,7 +33,7 @@ with the North Atlantic Ocean and the South Atlantic Ocean split at about 8°N
 <hr><hr>
 
 <h1>Indian Ocean<a name='T3'></a></h1>
-<img src='Indian.png' width='600px' height='500px'>
+<img src='indian.png' width='600px' height='500px'>
 <br><br>
 <p>The Indian Ocean is the third-largest of the world's five oceanic divisions, covering 70,560,000
 km² or ~19.8% of the water on Earth's surface. It is bounded by Asia to the north, Africa to the west and Australia to the east.
@@ -41,7 +41,7 @@ km² or ~19.8% of the water on Earth's surface. It is bounded by Asia to the nor
 <hr><hr>
 
 <h1>Arctic Ocean<a name='T4'></a></h1>
-<img src='Arctic.png' width='600px' height='500px'>
+<img src='arctic.png' width='600px' height='500px'>
 <br><br>
 <p>The Arctic Ocean is the smallest and shallowest of the world's five major oceans.
 It spans an area of approximately 14,060,000 km² and is known as the coldest of all the oceans.
@@ -50,7 +50,7 @@ The International Hydrographic Organization recognizes it as an ocean, although 
 <hr><hr>
 
 <h1>Southern Ocean<a name='T5'></a></h1>
-<img src='Southern.png' width='600px' height='500px'>
+<img src='southern.png' width='600px' height='500px'>
 <br><br>
 <p>The Southern Ocean, also known as the Antarctic Ocean, comprises the southernmost waters of the World Ocean,
 generally taken to be south of 60° S latitude and encircling Antarctica.	
