--- a/food chain.html
+++ b/food chain.html
@@ -21,7 +21,7 @@ Effectively, the sun's energy triggers the beginning of the energy transfer in t
 <hr><hr>
 
 <h1>PRODUCERS<a name='s2'></a></h1>
-<img src='PRODUCERS.png' width='600px' height='500px'>
+<img src='producers.png' width='600px' height='500px'>
 <br><br>
 <P>The producers in a food chain include all autotrophs such as phytoplankton, cyanobacteria, algae, and green plants.
 This is the first stage in a food chain.
@@ -32,7 +32,7 @@ Producers are also known as autotrophs as they make their own food.
 <hr><hr>
 
 <h1>CONSUMERS<a name='s3'></a></h1>
-<img src='CONSUMERS.png' width='600px' height='500px'>
+<img src='consumers.png' width='600px' height='500px'>
 <br><br>
 <p>Consumers are all organisms that are dependent on plants or other organisms for food.
 This is the largest part of a food web, as it contains almost all living organisms.
@@ -42,7 +42,7 @@ parasites that live on other organisms by harming them and lastly the scavengers
 <hr><hr>
 
 <h1>DECOMPOSERS<a name='s4'></a></h1>
-<img src='DECOMPOSERS.png' width='600px' height='500px'>
+<img src='decomposers.png' width='600px' height='500px'>
 <br><br>
 <p>Decomposers are organisms that get energy from dead or waste organic material. This is the last stage in a food chain.
 Decomposers are an integral part of a food chain, as they convert organic waste materials into inorganic materials,
